# Messaging-service

./: .gitignore  CMakeLists.txt  README.md  utils.h
auth/: login.c  login.h
client/: client.c  client.h
database/: db_utils.c  utils.c  utils.h
database/message/: message.c  message.h
database/user/: user.c  user.h
server/: server.c  server.h
